# zero2prod-newsletter-api

./: Cargo.toml  Dockerfile  README.MD
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
