[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.2.1"
actix-session = { version = "0.7.2", features = ["redis-rs-tls-session"] }
actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
actix-web-lab = "0.18.5"
anyhow = "1.0.66"
argon2 = { version = "0.4.1", features = ["std"] }
base64 = "0.13.1"
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
config = "0.13.2"
htmlescape = "0.3.1"
rand = { version = "0.8.5", features = ["std_rng"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.147", features = ["derive"] }
serde-aux = "4.1.2"
thiserror = "1.0.37"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.6.2"
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = [
    "registry",
    "env-filter",
] }
unicode-segmentation = "1.10.0"
urlencoding = "2.1.2"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
validator = "0.16.0"

[dependencies.reqwest]
version = "0.11.13"
default-features = false
features = [
    "json",
    "rustls-tls",
    "cookies"
]

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]

[dev-dependencies]
claims = "0.7.1"
fake = "2.5.0"
linkify = "0.9.0"
once_cell = "1.16.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde_json = "1.0.89"
serde_urlencoded = "0.7.1"
wiremock = "0.5.15"